[vr] Close pending session request when destroying GVR device

Bug: 920742
Change-Id: I44f50fb0ea89ad5c75fbb2d338330651703ba4bb
Reviewed-on: https://chromium-review.googlesource.com/c/1416613
Auto-Submit: Tibor Goldschwendt <tiborg@chromium.org>
Commit-Queue: Bill Orr <billorr@chromium.org>
Reviewed-by: Bill Orr <billorr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623722}
Former-commit-id: 320281ab7e34c8baff685ff809664f0e48c9f200